<resources>
    <string name="app_name">FarmaciasWp</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_Usuarios">Usuario</string>
    <string name="hint_Ingreso">Ingresar</string>
    <string name="hint_Registro">Registro</string>
    <string name="desc_imagen_farmacia">Imagen de una farmacia</string>
    <string name="hint_Next">Next</string>
    <string name="hint_Olvidar">Olvido su  contraseña?</string>
    <string name="actualizar_producto">Actualizar Producto</string>
    <string name="nombre_comercial">Nombre Comercial</string>
    <string name="n_mero_molier_para_actualizar_no_editable">Número Molier Para Actualizar(No Editable)</string>
    <string name="nombre_gen_rico">Nombre Genérico</string>
    <string name="concentraci_n">Concentración</string>
    <string name="cargar_imagen">Cargar Imagen</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="lote">Lote</string>
    <string name="registro_invima">Registro INVIMA</string>
    <string name="presentaci_n">Presentación</string>
    <string name="precargar">Precargar</string>
    <string name="actualizar">Actualizar</string>
    <string name="guardar_en_bd">Guardar en BD</string>
    <string name="volver">Volver</string>
    <string name="t_tulo_actualizar_producto">Título: Actualizar Producto</string>
    <string name="n_mero_molier_num_rico">Número Molier (Numérico)</string>
    <string name="agregar">AGREGAR</string>
    <string name="guardar_datos_en_la_bd">Guardar Datos en la BD</string>
    <string name="valor">valor</string>
    <string name="descripci_n_breve">Descripción breve</string>
    <string name="nombre_del_medicamento">Nombre del Medicamento</string>
    <string name="precio">$Precio</string>
    <string name="a_adir">Añadir</string>
    <string name="imagen_del_medicamento">Imagen del medicamento</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="ingrese_n_mero_molier">Ingrese Número Molier</string>
    <string name="eliminar_producto">Eliminar Producto</string>
    <string name="ingrese_el_molier_del_producto">Ingrese el Molier del producto</string>
    <string name="buscar_producto">Buscar Producto</string>
    <string name="resultado_de_la_b_squeda">Resultado de la Búsqueda</string>
    <string name="eliminar_producto_descripcion">eliminar_producto_descripcion</string>
    <string name="buscar_producto_descripcion">BUSCAR_producto_descripcion</string>
    <string name="ver_el_carrito">Ver el carrito</string>
    <string name="crud_farmaciawp">CRUD FarmaciaWP</string>
    <string name="nuestro_catalogo">NUESTRO CATALOGO</string>
    <string name="bienvenidos_a_farmaciaswp">Bienvenidos A FarmaciasWp</string>
    <string name="logo_de_la_empresa">Logo de la Empresa</string>
    <string name="descripcion_olvidar_contrasena">descripcion_olvidar_contrasena</string>
    <string name="agregar_producto_desc">agregar_producto_desc</string>
    <string name="carrito_de_compras">Carrito de Compras</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="negativo">-</string>
    <string name="numero1">1</string>
    <string name="mas">+</string>
    <string name="precio_">$25.00</string>
    <string name="descripcion_nuestro_catalogo">descripcion nuestro_catalogo</string>
    <string name="farmaciaswp_tu_droguer_a_de_confianza">FarmaciasWP - Tu droguería de confianza</string>
    <string name="farmaciaswp_gestion_bd">FarmaciasWP - Gestion BD</string>
    <string name="pulse_aqu_para_agregar_un_producto">Pulse aquí para agregar un producto</string>
    <string name="pulse_aqu_para_buscar_un_producto">Pulse aquí para buscar un producto</string>
    <string name="pulse_aqu_para_actualizar_un_producto">Pulse aquí para actualizar un producto</string>
    <string name="pulse_aqu_para_borrar_un_producto">Pulse aquí para borrar un producto</string>
    <string name="listad">LISTADO DE PRODUCTOS \" FarmaciaWP\"</string>
    <string name="Botonlistao">Si desea adquirir algun producto de nuestro inventario por favor dirijase por medio de este botton a nuestro listado de productos</string>
    <string name="descripcion_eliminar_producto">descripcion eliminar producto</string>
    <string name="descripcion_boton_agregar">descripcion boton agregar</string>
    <string name="desc_anuncio">desc anuncio</string>
    <string name="desc_droguerica_confianza">desc droguerica confianza</string>
    <string name="logo_de_la_empresa2">Logo de la Empresa</string>
    <string name="nombre_del_cliente">Nombre del Cliente</string>
    <string name="direcci_n">Dirección</string>
    <string name="tel_fono">Teléfono</string>
    <string name="registrar">Registrar</string>
    <string name="registro_de_clientes">Registro de Clientes</string>
    <string name="imagen_del_producto2">Imagen del producto</string>
    <string name="id_producto_molier">ID Producto (molier)</string>
    <string name="nombre_comercial2">Nombre Comercial</string>
    <string name="nombre_gen_rico2">Nombre Genérico</string>
    <string name="concentraci_n2">Concentración</string>
    <string name="presentaci_n1">Presentación</string>
    <string name="registro_invima2">Registro Invima</string>
    <string name="lote2">Lote</string>
    <string name="valor2">Valor</string>
    <string name="adquirir">Adquirir</string>
    <string name="ubicacion">Esperando ubicación...</string>
    <string name="ir_al_maps">Ir al maps</string>
    <string name="nombre_comercia">NOMBRE COMERCIAL</string>
    <string name="actualizar_producto2">Actualizar Producto</string>
    <string name="nombre_generico">NOMBRE GENERICO</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ubicaci_n_actual">Ubicación Actual</string>
    <string name="nombre_cliente">Nombre Cliente</string>
    <string name="numero_telefono">Numero Telefono</string>
    <string name="direccion">Direccion</string>
    <string name="numero_de_documento">Numero De Documento</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="registro_de_clientest">REGISTRO DE CLIENTES</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_menu">Menu_Activity</string>

</resources>