<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imgProducto"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:contentDescription="@string/imagen_del_producto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtNombreComercial"
        android:scaleType="centerInside"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/txtNombreComercial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre_comercial2"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/imgProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/txtNombreGenerico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre_gen_rico2"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txtNombreComercial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="4dp" />

    <TextView
        android:id="@+id/txtConcentracion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/concentraci_n2"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txtNombreGenerico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="4dp" />

    <TextView
        android:id="@+id/txtPresentacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/presentaci_n1"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txtConcentracion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="4dp" />

    <TextView
        android:id="@+id/txtRegistroInvima"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registro_invima2"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txtPresentacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="4dp" />

    <TextView
        android:id="@+id/txtLote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lote2"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txtRegistroInvima"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="4dp" />

    <TextView
        android:id="@+id/txtValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/valor2"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txtLote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="4dp" />

    <!-- Botón "Adquirir" -->
    <Button
        android:id="@+id/buttonAdquirir"
        android:layout_width="264dp"
        android:layout_height="57dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/button_blue"
        android:backgroundTintMode="src_over"
        android:text="@string/adquirir"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtValor" />
</androidx.constraintlayout.widget.ConstraintLayout>
