<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Imagen del medicamento -->
        <ImageView
            android:id="@+id/medicamento_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/imagen_del_medicamento" />

        <!-- Información del medicamento -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"> <!-- Agregar paddingEnd para simetría -->

            <TextView
                android:id="@+id/medicamento_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_del_medicamento"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicamento_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripci_n_breve"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/medicamento_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio"
                android:textColor="#1E3A58"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Botón de agregar al carrito -->
        <Button
            android:id="@+id/add_to_cart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#1E3A58"
            android:text="@string/a_adir"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
