<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".Buscar">

    <!-- Título de la actividad -->
    <TextView
        android:id="@+id/tituloBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar_producto"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo para ingresar el Número de Molier (ID) -->
    <EditText
        android:id="@+id/inputMolier"
        android:layout_width="340dp"
        android:layout_height="69dp"
        android:background="@drawable/custom_edittext_border"
        android:hint="@string/ingrese_n_mero_molier"
        android:autofillHints="none"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />


    <Button
        android:id="@+id/buttonBuscar"
        android:layout_width="262dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/button_blue"
        android:text="@string/buscar_producto"
        android:contentDescription="@string/buscar_producto_descripcion"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <TextView
        android:id="@+id/resultadoBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resultado_de_la_b_squeda"
        android:textSize="18sp"
        android:visibility="gone"
    android:padding="10dp"
    app:layout_constraintTop_toBottomOf="@+id/buttonBuscar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/buttonVolverBuscar"
        android:layout_width="265dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/button_blue"
        android:text="@string/volver"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="344dp"
        android:layout_height="170dp"
        android:background="@color/buttonBackground"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
